# IntentManager

./: CMakeLists.txt
inc/IntentManager/: IntentItem.hpp  IntentManager.hpp
src/: main.cpp
src/IntentManager/: IntentItem.cpp  IntentManager.cpp
tst/: CMakeLists.txt
tst/src/: IntentItemUT.cpp  IntentManagerUT.cpp
